[package]
name = "shibuichi"
description = "a simple zsh prompt preprocessor to add git integration"
license = "MIT"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = [ "derive", "wrap_help" ] }
git2 = "0.16"
nom = "7.1"
url = "2.2"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]
vendored-libgit2 = ["git2/vendored-libgit2"]
